Prevent details panel from flickering while zooming/panning

--- a/src/css/side-panel/base.less
+++ b/src/css/side-panel/base.less
@@ -113,8 +113,8 @@
         top: 32px;
         bottom: 0;
         padding: 0;
-        overflow-y: hidden;
-        overflow-x: hidden;
+        overflow-y: visible;
+        overflow-x: visible;
         border-width: 0;
         border-top: solid 1px @very-light-grey-color;
 
